# picolibc

./: .appveyor.yml  .clang-format  .clang-format-ignore  .drone.yml  .editorconfig  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING.LIBGLOSS  COPYING.NEWLIB  COPYING.picolibc  ChangeLog  ChangeLog.ARC  ChangeLog.csl  MAINTAINERS  MANIFEST  Makefile.def  Makefile.in  Makefile.tpl  README-maintainer-mode  README.arcgdb  README.md  config-ml.in  config.guess  config.sub  configure  configure.ac  configure.in  cross-aarch64-linux-gnu.txt  cross-arm-none-eabi.txt  cross-i386-linux-gnu.txt  cross-msp430-elf.txt  cross-riscv32-unknown-elf.txt  cross-riscv64-unknown-elf.txt  cross-rv32imac.txt  cross-xtensa-esp32-elf.txt  cross-xtensa-lx106-elf.txt  (+44 more)
dummyhost/: exit.c  iob.c  meson.build
empty-libs/: empty.c  meson.build
libc/stdlib/: CMakeLists.txt  Makefile  _Exit.c  __atexit.c  __call_atexit.c  _findenv.c  a64l.c  abort.c  aligned_alloc.c  arc4random.c  arc4random.h  assert_no_arg.c  atexit.c  atexit.h  atof.c  atoff.c  atoi.c  calloc.c  chacha_private.h  cxa-atexit.c  div.c  ejtouc.c  environ.c  eprintf.c  exit.c  exitprocs.c  free.c  gdtoa.h  getenv.c  getopt.c  getpagesize.c  ignore_handler_s.c  imaxdiv.c  jis.h  jitouc.c  l64a.c  labs.c  lcong48.c  lldiv.c  local-malloc.h  (+57 more)
libdl/: dl.c  dl_impl.h  elf32.h  meson.build
libgloss/: ChangeLog  MAINTAINERS  Makefile.am  Makefile.in  README  acinclude.m4  aclocal.m4  close.c  configure  configure.ac  configure.in  debug.c  debug.h  fstat.c  getpid.c  glue.h  isatty.c  kill.c  lseek.c  multi-build.in  open.c  print.c  putnum.c  read.c  sbrk.c  stat.c  syscall.h  unlink.c  write.c
libgloss/aarch64/: Makefile.in  _exit.c  _kill.c  aclocal.m4  configure  configure.ac  configure.in  crt0.S  elf-aem-validation.specs  elf-aem-ve.specs  elf-rdimon.specs  ftruncate.c  svc.h  syscalls.c
libgloss/arc/: Makefile.in  Makefile.inc  arc-main-helper.c  arc-specific.h  arc-symbols.h  arc-timer.c  arc-timer.h  arcv2elf-common.ld  configure  crt0.S  emsdp-uart-setup.c  emsdp1.1.ld  emsdp1.1.specs  emsdp1.1_ram.ld  emsdp1.1_ram.specs  emsdp1.2.ld  emsdp1.2.specs  emsdp1.2_ram.ld  emsdp1.2_ram.specs  emsk-uart-setup.c  emsk1_em4.ld  emsk1_em4.specs  emsk1_em6.ld  emsk1_em6.specs  emsk1_em6_ram.ld  emsk1_em6_ram.specs  emsk2.1_em5d.ld  emsk2.1_em5d.specs  emsk2.1_em7d.ld  emsk2.1_em7d.specs  emsk2.1_em7d_ram.ld  emsk2.1_em7d_ram.specs  emsk2.2_em11d.ld  emsk2.2_em11d.specs  emsk2.2_em11d_ram.ld  emsk2.2_em11d_ram.specs  emsk2.2_em7d.specs  emsk2.2_em7d_ram.specs  emsk2.2_em9d.ld  emsk2.2_em9d.specs  (+22 more)
libgloss/arc64/: Makefile.inc  asm.h  crt0.S  crti.S  crtn.S
libgloss/arm/: Makefile.in  _exit.c  _kill.c  acinclude.m4  aclocal.m4  arm.h  arm.sc  armv7m.specs  coff-iq80310.specs  coff-redboot.ld  configure  configure.ac  configure.in  crt0.S  elf-aprofile-validation.specs  elf-aprofile-ve.specs  elf-cm3.ld  elf-iq80310.specs  elf-lm3s10x.ld  elf-lm3s301.ld  elf-lm3s31x.ld  elf-nano.specs  elf-rdimon.specs  elf-redboot.ld  elf-redboot.specs  libcfunc.c  linux-crt0.S  linux-crt0.c  linux-syscalls0.S  linux-syscalls1.c  redboot-crt0.S  redboot-syscalls.c  swi.h  syscalls.c  trap.S  truncate.c
libgloss/bfin/: Makefile.in  Makefile.inc  _exit.c  bf523.ld  bf525.ld  bf526.ld  bf527.ld  bf531.ld  bf532.ld  bf533.ld  bf534.ld  bf536.ld  bf537.ld  bf538.ld  bf539.ld  bf542.ld  bf544.ld  bf547.ld  bf548.ld  bf549.ld  bf561.ld  bf561a.ld  bf561b.ld  bf561m.ld  bfin-common-mc.ld  bfin-common-sc.ld  configure  configure.ac  syscalls.c
libgloss/config/: default.mh  ppc.mh
libgloss/cr16/: Makefile.in  Makefile.inc  configure  configure.ac  fstat.c  isatty.c  kill.c  stat.c
libgloss/cris/: Makefile.in  configure  configure.ac  configure.in  crt0.S  crtn.c  gensyscalls  lcrt0.c  linunistd.h  outbyte.c  setup.S
libgloss/crx/: Makefile.in  configure  configure.ac  configure.in  fstat.c  isatty.c  stat.c  time.c
libgloss/csky/: Makefile.in  configure  configure.ac  configure.in  crt0.S  io-gettimeofday.c
libgloss/d30v/: Makefile.in  configure  syscalls.c
libgloss/doc/: Makefile.in  Makefile.inc  configure  configure.ac  configure.in  porting.texi
libgloss/epiphany/: Makefile.in  Makefile.inc  _isatty.c  access.c  configure  configure.ac  crt0.S  epiphany-syscalls.c  epiphany-syscalls.h  (+6 more)
newlib/: CMakeLists.txt  ChangeLog  ChangeLog-2015  ChangeLog.64bit  ChangeLog.ARC  HOWTO  MAINTAINERS  Makefile.am  Makefile.in  Makefile.shared  NEWS  README  _newlib_version.hin  acconfig.h  acinclude.m4  aclocal.m4  configure  configure.ac  configure.host  configure.in  libtool.m4  make-library  make-target  meson.build  newlib.hin
picocrt/: CMakeLists.txt  crt0-none.c  crt0.h  meson.build
semihost/: CMakeLists.txt  clock.c  close.c  exit.c  fstat.c  getentropy.c  gettimeofday.c  iob.c  isatty.c  kill.c  lseek.c  lseek64.c  mapstdio.c  meson.build  open.c  putc.c  read.c  semihost-private.h  semihost.c  semihost.h  sys_clock.c  sys_close.c  sys_elapsed.c  sys_errno.c  sys_exit.c  sys_exit_extended.c  sys_feature.c  sys_flen.c  sys_get_cmdline.c  sys_getc.c  sys_heapinfo.c  sys_iserror.c  sys_istty.c  sys_open.c  sys_read.c  sys_remove.c  sys_rename.c  sys_seek.c  sys_system.c  sys_tickfreq.c  (+6 more)
test/: CMakeLists.txt  CP720  abort.c  atexit.c  check-aarch64-fvp-page-table.py  complex-funcs.c  constructor-skip.c  constructor.c  fenv.c  ffs.c  fma_gen.5c  fma_vec.h  hello.c  hosted-exit.c  lock-valid.c  long_double.c  long_double_gen.5c  long_double_vec.h  malloc.c  malloc_stress.c  math-funcs.c  math_errhandling.c  math_errhandling_tests.c  meson.build  native-locks.c  on_exit.c  posix-io.c  printf-tests.c  printf_scanf.c  rand.c  regex.c  rounding-mode-sub.c  rounding-mode.c  rounding-mode.h  setjmp.c  stack-smash.c  strtox.c  t_fmemopen.c  test-argv.c  test-atomic.c  (+87 more)
winsup/: CONTRIBUTORS  CYGWIN_LICENSE  ChangeLog  MAINTAINERS  Makefile.am  Makefile.am.common  Makefile.common  Makefile.in  README  acinclude.m4  aclocal.m4  autogen.sh  c++wrap  ccwrap  configure  configure.ac  configure.cygwin  configure.in
(+11805 files in other folders)
